# SystemProbability

./: .gitignore  README.md  main.py  pyproject.toml  sql_app.db  sql_app.sqlite
backend/: processes.py  schemas.py
sql_app/: __main__.py  adj_list.py  crud.py  database.py  dependencies.py  main.py  models.py  processes.py  schemas.py
sql_app/crud/: graph.py  helper.py  node.py  system.py  user.py
sql_app/routers/: app.py  graph.py  node.py  system.py  user.py
tests/: test_systemapi.py
